--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -11,13 +11,15 @@
 	<h1>SampleTools ログイン画面</h1>
 		<br>
 		<form action="/login" method="post">
-		<label>ユーザーID</label>
-		<input type="text"><br>
-		<br>
-		<label>パスワード</label>
-		<input type="password"><br>
-		<br>
-		<button class="btn btn-primary" type="submit">ログイン</button>
+			<p class="text-danger" th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']}!=null"
+			th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">Login Error Message</p>
+			<label>ユーザーID</label>
+			<input type="text" name="userId"><br>
+			<br>
+			<label>パスワード</label>
+			<input type="password" name="password"><br>
+			<br>
+			<button class="btn btn-primary" type="submit">ログイン</button>
 		</form>
 		<br>
 		<a th:href="@{'/signup'}">ユーザー新規登録はこちら</a>
