--- a/src/main/resources/templates/login/homeLayout.html
+++ b/src/main/resources/templates/login/homeLayout.html
@@ -29,7 +29,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 			<div class="col-md-2 sidebar">
 				<ul class="navbar-nav">
 					<li class="nav-item" role="presentation">
-					<a th:href="@{/dateLog}">賞味期限管理</a>
+					<a th:href="@{/datelog}">賞味期限管理</a>
 					</li>
 					<li class="nav-item" role="presentation">
 					<a th:href="@{/userMaster}">ユーザー管理</a>
